--- a/deploy/index.html
+++ b/deploy/index.html
@@ -19,7 +19,7 @@
 <meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="ErgoDox Mechanical Keyboard" />
 <script type="application/ld+json">
-{"name":"ErgoDox Mechanical Keyboard","description":"Documentation and build guide for the ErgoDox mechanical keyboard","@type":"WebSite","url":"http://localhost:4000/","headline":"index","@context":"http://schema.org"}</script>
+{"description":"Documentation and build guide for the ErgoDox mechanical keyboard","headline":"index","@type":"WebSite","url":"http://localhost:4000/","name":"ErgoDox Mechanical Keyboard","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     </head>
